--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>webpack 2 demo</title>
   </head>
   <body>
-    <script src="dist/bundle.js"></script>
+    <script src="dist/main.js"></script>
   </body>
 </html>
