Set up dev server

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>webpack 2 demo</title>
+    <title>Webpack2 Setup</title>
   </head>
   <body>
     <script src="dist/main.js"></script>
