Set up eslini, babel, and source-map

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Webpack2 Setup</title>
   </head>
   <body>
-    <script src="dist/main.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
