--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Webpack2 Setup</title>
   </head>
   <body>
-    <script src="/bundle.js"></script>
+    <h3>Set up a web site here...</h3>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
