--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   </head>
   <body>
     <h3>Set up a web site here...</h3>
+    <div class="contentWrapper">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni mollitia quasi, earum modi vitae accusantium, hic, maiores eius repellendus esse praesentium, totam quo veritatis sint!
+    </div>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
