--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
     <title>Webpack2 Setup</title>
   </head>
   <body>
+    <img src="images/color-palette.png" alt="">
+    
     <h3>Set up a web site here...</h3>
     <div class="contentWrapper">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni mollitia quasi, earum modi vitae accusantium, hic, maiores eius repellendus esse praesentium, totam quo veritatis sint!
